# waivelets-v0.1

./: .dockerignore  .replit  Dockerfile  LICENSE  MIDWAY_REPORT.md  README.md  ai_detector_params.json  app.py  basis.npz  basis_clusters.json  batch_gutenberg.py  batch_results_v2.json  config.json  content.json  demo_fingerprint.py  eval_ai_human_v2.py  eval_ai_human_v2_results.json  eval_ai_vs_human.py  eval_ai_vs_human_results.json  eval_breakthrough.py  eval_charcode.py  fastprint.py  ffmpeg.txt  main.py  main_apr18.py  mega_corpus.py  mega_corpus_results.jsonl  orRes.csv  pyproject.toml  replit.nix  run.sh  topology_analysis.py  viz.html  viz_data.json  wavelet_engine.py  yeatsRes.csv
autoresearch/: config_space.py  experiment.py  run.py
autoresearch/results/: gatsby_baseline.json  run_20260329_193855.jsonl  run_20260329_193921.jsonl  run_20260329_200759.jsonl  summary_20260329_193855.json  summary_20260329_193921.json  summary_20260329_200759.json
eval_breakthrough_results/: checkpoint.jsonl  full_results.json
outputs/20240409171019/: log.txt
outputs/20240409171551/: log.txt
outputs/20240409172004/: log.txt
outputs/20240420150231/: log.txt
outputs/20240420150352/: log.txt
outputs/20240420181736/: log.txt
texts/: catalog.json  gatsby.json
wAIvGUI/: app.py
web/: index.html  precomputed.json  requirements.txt  server.py
