[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
transformers = "^4.39.3"
torch = "^2.2.2"
opencv-python = "^4.9.0.80"
sentence-transformers = "^2.6.1"
pywavelets = "1.6.0"
einops = "0.7.0"
pandas = "2.2.2"
shiny = "0.8.1"
pysondb = "1.6.7"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"